Removed Extra margin for last p tag.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -81,6 +81,10 @@ body {
   margin-bottom: 10px;
 }
 
+.main .main-content p:last-child {
+  margin: 0;
+}
+
 .main .cta-group {
   overflow: hidden;
   padding-bottom: 5px;
